fix:scrollbar fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 html,body{
   scroll-behavior: smooth;
-  overflow: scroll;
+  overflow-y: scroll;
   scrollbar-gutter: stable both-edges;
 }
 /* 媒体查询 */
